# chatgpt-term

./: Cargo.toml  README.md
src/: api.rs  app.rs  lib.rs  main.rs
