[package]
name = "chatgpt-term"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25"
reqwest = { version = "0.11.14", features = ["blocking", "serde_json", "json"] }
serde = { version = "1.0.152", features = ["derive"] }

serde_json = "1.0.93"
textwrap = "0.16.0"
tui = { version = "*", default-features = false, features = ["crossterm"] }
tui-textarea = { version = "*", default-features = false, features = [
    "crossterm",
] }
