[package]
name = "chatgpt-term"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", default-features = false, features = [
    "time",
    "std",
    "clock",
] }
confy = "0.5.1"
crossterm = "0.25"
gumdrop = "0.8.1"
reqwest = { version = "0.11.14", features = ["blocking", "serde_json", "json"] }
serde = { version = "1.0.152", features = ["derive"] }

serde_json = "1.0.93"
textwrap = "0.16.0"
tui = { version = "*", default-features = false, features = ["crossterm"] }
tui-textarea = { version = "*", default-features = false, features = [
    "crossterm",
] }

[features]
